feat: mock the project [1]

--- a/.gitignore
+++ b/.gitignore
@@ -191,5 +191,5 @@ terraform.tfvars
 # Terraform variable files
 
 # GCP
-mts-default-projetct-7f79c1863782.json
+mts-default-portofolio.json
 Solve.md
