--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Prepare and validate Terraform
         run: |
             cd ./configs/terraform
+            echo 'Creating terraform.tfvars file'
             echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
-            cat terraform.tfvars
             terraform init
             echo "Running tests 👀"
             terraform validate
@@ -73,7 +73,8 @@ jobs:
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
           echo "${{ secrets.TERRAFORM_TFVARS }}" > terraform.tfvars
           terraform init
-          terraform apply -auto-approve
+          terraform workspace select dev
+          terraform plan -out=tfplan
 
   tf-destroy-prd:
     name: Terraform Destroy (PRD)
