--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Portfolio
 description: Final project for the Postgraduate in Data Engineer at the Data Science Academy
 
-
 on:
     push:
         branches:
@@ -12,7 +11,7 @@ on:
 
 jobs:
   code-test:
-    name: Code Python Test
+    name: 🐍 Code Python Test
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main'
     container: python:3.11-bullseye
@@ -33,8 +32,9 @@ jobs:
 
 
   tf-test:
-    name: Terraform Test
+    name: ⚙️ Terraform Test
     runs-on: ubuntu-latest
+    needs: code-test # 🔥 Critical dependency!
     if: github.ref != 'refs/heads/main'
     container:
       image: mattheusxs/tf-1.11-cloud-sdk-515
@@ -48,18 +48,19 @@ jobs:
                 credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
                 project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-        - name: Set up Terraform and Deploy
+        - name: validate Terraform configuration
           run: |
                 cd ./configs/terraform
-
-                # Cria o arquivo terraform.tfvars
+                echo '🚧 Creating credentials file... 🚧'
                 echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
 
-                # Inicializa e aplica o Terraform
+                echo '🚧 Initializing and applying Terraform... 🚧'
                 terraform init
                 terraform workspace select dev || terraform workspace new dev
-                terraform plan -out=tfplan
-                terraform apply -auto-approve tfplan
+                terraform validate
+                terraform test
+
+                echo "Whole Terraform configuration is valid ✅"
 
         - name: Clean up (opcional)
           run: |
@@ -67,44 +68,52 @@ jobs:
 
 
   tf-deploy-prd:
-    name: Terraform Deploy (PRD)
+    name: ⚙️ Terraform Deploy (PRD)
     runs-on: ubuntu-latest
     container:
       image: mattheusxs/tf-1.11-cloud-sdk-515
       options: --entrypoint=""
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        - name: Authenticate to GCP
+          uses: google-github-actions/auth@v2
+          with:
+            credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Terraform Deploy
-        run: |
-          cd ./configs/terraform
-          echo "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
-          gcloud auth activate-service-account --key-file=credentials.json
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          echo "${{ secrets.TERRAFORM_TFVARS }}" > terraform.tfvars
-          terraform init
-          terraform workspace select dev
-          terraform plan -out=tfplan
+        - name: Terraform Deploy
+          run: |
+                cd ./configs/terraform
+                echo '🚧 Creating credentials file... 🚧'
+                echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
+
+                echo '🚧 Initializing and applying Terraform... 🚧'
+                terraform init
+                terraform workspace select dev || terraform workspace new dev
+                terraform apply -auto-approve
+
 
   tf-destroy-prd:
-    name: Terraform Destroy (PRD)
+    name: 🔨Terraform Destroy (PRD)
     runs-on: ubuntu-latest
     container:
       image: mattheusxs/tf-1.11-cloud-sdk-515
       options: --entrypoint=""
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        - name: Authenticate to GCP
+          uses: google-github-actions/auth@v2
+          with:
+            credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Terraform Destroy
-        run: |
-          cd ./configs/terraform
-          echo "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
-          gcloud auth activate-service-account --key-file=credentials.json
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          echo "${{ secrets.TERRAFORM_TFVARS }}" > terraform.tfvars
-          terraform init
-          terraform destroy -auto-approve
+        - name: Terraform Destroy
+          run: |
+                cd ./configs/terraform
+                echo '🚧 Creating credentials file... 🚧'
+                echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
+
+                echo '🚧 Initializing and applying Terraform... 🚧'
+                terraform init
+                terraform workspace select dev || terraform workspace new dev
+                terraform apply -auto-approve
