--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
           run: |
                 ls -la
                 pwd
-                cd ./configs/terraform
+                ./configs/terraform/
                 echo '🚧 Creating credentials file... 🚧'
                 echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
 
@@ -125,7 +125,7 @@ jobs:
         - name: Terraform Destroy
           run: |
                 echo "🚨 WARNING: This action will destroy all resources in the 'dev' workspace! 🚨"
-                cd ./configs/terraform
+                ./configs/terraform/
                 echo '🚧 Creating credentials file... 🚧'
                 echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
 
