ci/cd: gitlab --> git_action [5.10]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,20 @@ name: Portfolio
 description: Final project for the Postgraduate in Data Engineer at the Data Science Academy
 
 on:
-    push:
-        branches: [main, dev_matheus]
-    pull_request:
-        branches: [main, dev_matheus]
-    workflow_dispatch:
-        inputs:
-            action:
-                description: '⚙️ Terraform action'
-                required: true
-                type: choice
-                options: [deploy, destroy]
-                default: 'deploy'
+  push:
+    branches: [main, dev_matheus]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
+    inputs:
+      action:
+        description: '⚙️ Terraform action'
+        required: true
+        type: choice
+        options:
+          - deploy
+          - destroy
+        default: 'deploy'
 
 jobs:
     code-test:
