--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,37 +1,35 @@
-name: Manual Terraform Actions
+name: Practice workflow
+description: Practice testing
 
 on:
     workflow_dispatch:
-     inputs:
-      name:
-       description: 'Select the action to perform'
-       type: string
-       default: 'test'
-
-
+      inputs:
+        name:
+          type: string
+          description: Name of the candidate
+          default: Melvin
+        height:
+          type: number
+          description: Height of the candidate
+          default: 152
+        qualification:
+            type: choice
+            description: Qualification of the candidate
+            default: btech
+            options:
+            - btech|
+            - bcal
+            - mca
+            - osc
+            - mtech
+        eligible:
+            type: boolean
+            description: Candidate is eligible or not
 jobs:
-  tf-manual:
-    name: ⚙️ Terraform Manual Actions
+  Development:
+    name: This job is for development landscape
     runs-on: ubuntu-latest
     steps:
-      - name: 🕵🏾 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🧑🏾‍✈️ Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Terraform Manual Action
+      - name: Step non 1
         run: |
-          cd ./configs/terraform
-          echo '🚧 Creating tfvars file... 🚧'
-          echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
-          terraform init
-          terraform workspace select dev || terraform workspace new dev
-          terraform ${{ github.event.inputs.name }} -auto-approve
-          echo "✅ Terraform action '${{ github.event.inputs.name }}' completed"
-
-      - name: 💁🏾‍♂️ Clean up
-        run: rm -f ./configs/terraform/*.json
+          echo '${{ toJSON(github) }}'
