--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,25 +12,36 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      name:
+        type: string
+        description: Name of the candidate
+        default: Melvin
+        
+      height:
+        type: number
+        description: Height of the candidate
+        default: 123
+        
+      qualification:
+          type: choice
+          description: Qualification of the candidate
+          default: btech
+          options:
+          - btech|
+          - bcal
+          - mca
+          - osc
+          - mtech
+      eligible:
+          type: boolean
+          description: Candidate is eligible or not
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  Development:
+    name: This job is for development landscape
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Step non 1
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo '${{ toJSON(github) }}'
