--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Pipe LogiStream Solutions
+name: Pipe LogiStream Solutions ( v1 )
 
 # Controls when the workflow will run
 on:
@@ -21,115 +21,28 @@ on:
 
 
 jobs:
-  code-test:
-    name: 🐍 Code Python Test
+  Development:
+    name: Step 1
     runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main'
-    container: python:3.11-bullseye
     steps:
-      - name: 🕵🏾 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 👨🏾‍🔧 Install dependencies
+      - name: Step non 1
         run: |
-          apt-get update
-          apt-get install -y build-essential
+          echo '${{ toJSON(github) }}'
 
-      - name: Run tests
-        run: |
-          echo "Running tests 👀"
-          sleep 5
-          echo "Tests successfully completed 🫦"
-
-  tf-test:
-    name: ⚙️ Terraform Test
+  Development_1:
+    name: Step 2
     runs-on: ubuntu-latest
-    needs: code-test
-    if: github.ref != 'refs/heads/main'
-    container:
-      image: ${{ vars.TF_DEPLOY_IMAGE }}
-      options: --platform=linux/amd64
+    needs: Development
     steps:
-      - name: 🕵🏾 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🧑🏾‍✈️ Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
-          project_id: ${{ vars.GCP_PROJECT_ID }}
-
-      - name: 🕵🏾 validate Terraform configuration
+      - name: Step non 1
         run: |
-          cd ./configs/terraform
-          echo '🚧 Creating credentials file... 🚧'
-          echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
-          terraform init
-          terraform workspace select dev || terraform workspace new dev
-          terraform validate
-          terraform test
-          echo "Whole Terraform configuration is valid ✅"
+          echo '${{ toJSON(github) }}'
 
-      - name: 💁🏾‍♂️ Clean up
-        run: rm -f ./configs/terraform/*.json
-
-  tf-deploy:
-    name: ⚙️ Terraform Deploy
+  Development_2:
+    name: Step 3
     runs-on: ubuntu-latest
     if: github.event.inputs.action == 'deploy'
-    container:
-      image: ${{ vars.TF_DEPLOY_IMAGE }}
-      options: --platform=linux/amd64
     steps:
-      - name: 🕵🏾 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🧑🏾‍✈️ Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
-          project_id: ${{ vars.GCP_PROJECT_ID }}
-
-      - name: Terraform Deploy
+      - name: Step non 1
         run: |
-          cd ./configs/terraform
-          echo '🚧 Creating credentials file... 🚧'
-          echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
-          terraform init
-          terraform workspace select dev || terraform workspace new dev
-          terraform apply -auto-approve
-          echo "Whole Terraform configuration is applied successfully ✅"
-
-      - name: 💁🏾‍♂️ Clean up
-        run: rm -f ./configs/terraform/*.json
-
-
-  tf-destroy:
-    name: 🔨 Terraform Destroy
-    runs-on: ubuntu-latest
-    if: github.event.inputs.action == 'destroy'
-    container:
-      image: ${{ vars.TF_DEPLOY_IMAGE }}
-      options: --platform=linux/amd64
-    steps:
-      - name: 🕵🏾 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🧑🏾‍✈️ Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
-          project_id: ${{ vars.GCP_PROJECT_ID }}
-
-      - name: Terraform Destroy
-        run: |
-          cd ./configs/terraform
-          echo '🚧 Creating tfvars file... 🚧'
-          echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
-          terraform init
-          terraform workspace select dev || terraform workspace new dev
-          terraform destroy -auto-approve
-          echo "✅ Terraform resources destroyed"
-
-      - name: 💁🏾‍♂️ Clean up
-        run: rm -f ./configs/terraform/*.json
+          echo '${{ toJSON(github) }}'
