--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,29 +13,13 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      name:
-        type: string
-        description: Name of the candidate
-        default: Melvin
-        
-      height:
-        type: number
-        description: Height of the candidate
-        default: 123
-        
-      qualification:
-          type: choice
-          description: Qualification of the candidate
-          default: btech
-          options:
-          - btech|
-          - bcal
-          - mca
-          - osc
-          - mtech
-      eligible:
-          type: boolean
-          description: Candidate is eligible or not
+      action:
+        type: choice
+        description: '⚙️ Choose Terraform action'
+        options:
+          - deploy
+          - destroy
+        default: deploy
 
 jobs:
   Development:
