--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -81,3 +81,35 @@ jobs:
 
       - name: 💁🏾‍♂️ Clean up
         run: rm -f ./configs/terraform/*.json
+
+
+  tf-deploy-prd:
+    name: ⚙️ Terraform Deploy (PRD)
+    runs-on: ubuntu-latest
+    needs: tf-test
+    if: github.event.inputs.action == 'deploy'
+    container:
+      image: mattheusxs/tf_1.12.2-gcp_535.0.0:2.0
+      options: --platform=linux/amd64
+    steps:
+      - name: 🕵🏾 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🧑🏾‍✈️ Authenticate to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Terraform Deploy
+        run: |
+          cd ./configs/terraform
+          echo '🚧 Creating credentials file... 🚧'
+          echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
+          terraform init
+          terraform workspace select dev || terraform workspace new dev
+          terraform apply -auto-approve
+          echo "Whole Terraform configuration is applied successfully ✅"
+
+      - name: 💁🏾‍♂️ Clean up
+        run: rm -f ./configs/terraform/*.json
