--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -113,3 +113,34 @@ jobs:
 
       - name: 💁🏾‍♂️ Clean up
         run: rm -f ./configs/terraform/*.json
+
+
+  tf-destroy-prd:
+    name: 🔨 Terraform Destroy (PRD)
+    runs-on: ubuntu-latest
+    if: github.event.inputs.action == 'destroy'
+    container:
+      image: mattheusxs/tf_1.12.2-gcp_535.0.0:2.0
+      options: --platform=linux/amd64
+    steps:
+      - name: 🕵🏾 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🧑🏾‍✈️ Authenticate to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Terraform Destroy
+        run: |
+          cd ./configs/terraform
+          echo '🚧 Creating tfvars file... 🚧'
+          echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
+          terraform init
+          terraform workspace select dev || terraform workspace new dev
+          terraform destroy -auto-approve
+          echo "✅ Terraform resources destroyed"
+
+      - name: 💁🏾‍♂️ Clean up
+        run: rm -f ./configs/terraform/*.json
