--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,6 +39,7 @@ jobs:
           sleep 5
           echo "Tests successfully completed 🫦"
 
+
   tf-test:
     name: ⚙️ Terraform Test
     runs-on: ubuntu-latest
@@ -72,8 +73,8 @@ jobs:
         run: rm -f ./configs/terraform/*.json
 
 
-  tf-deploy-prd:
-    name: ⚙️ Terraform Deploy (PRD)
+  tf-deploy:
+    name: ⚙️ Terraform Deploy
     runs-on: ubuntu-latest
     needs: tf-test
     if: github.event.inputs.action == 'deploy'
@@ -104,8 +105,8 @@ jobs:
         run: rm -f ./configs/terraform/*.json
 
 
-  tf-destroy-prd:
-    name: 🔨 Terraform Destroy (PRD)
+  tf-destroy:
+    name: 🔨 Terraform Destroy
     runs-on: ubuntu-latest
     if: github.event.inputs.action == 'destroy'
     container:
