--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "dev_matheus" ]
   pull_request:
     branches: [ "main" ]
-    types: [closed]  # Detecta quando um PR é fechado (mergeado ou não)
+    types: [closed]
+
   workflow_dispatch:
     inputs:
       action:
@@ -17,10 +18,14 @@ on:
         default: deploy
 
 jobs:
+
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #
+#                               Environmental Development                                           #
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #
   code-test:
     name: 🐍 Code Python Test
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' }}
+    if: github.ref != 'refs/heads/main'
     container: python:3.11-bullseye
     steps:
       - name: 🕵🏾 Checkout code
@@ -37,11 +42,12 @@ jobs:
           sleep 5
           echo "Tests successfully completed 🫦"
 
+
   tf-test:
     name: ⚙️ Terraform Test
     runs-on: ubuntu-latest
     needs: code-test
-    if: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' }}
+    if: github.ref != 'refs/heads/main'
     container:
       image: ${{ vars.TF_DEPLOY_IMAGE }}
       options: --platform=linux/amd64
@@ -53,7 +59,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          project_id: ${{ vars.GCP_PROJECT_ID}}
 
       - name: 🕵🏾 validate Terraform configuration
         run: |
@@ -70,18 +76,14 @@ jobs:
         run: rm -f ./configs/terraform/*.json
 
 
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #
+#                             Environmental Development / Production                                #
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #
   tf-deploy:
     name: ⚙️ Terraform Deploy
     runs-on: ubuntu-latest
-    needs:
-      - tf-test
-      - code-test
-    if: |
-      (github.event_name == 'pull_request' &&
-       github.event.action == 'closed' &&
-       github.event.pull_request.merged == true) ||
-      (github.event_name == 'workflow_dispatch' &&
-       github.event.inputs.action == 'deploy')
+    needs: tf-test
+    if: github.event.inputs.action == 'deploy'
     container:
       image: ${{ vars.TF_DEPLOY_IMAGE }}
       options: --platform=linux/amd64
