--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -99,29 +99,29 @@ jobs:
 
       - name: 👨🏾‍🔧 Install dependencies
         run: |
-          apt-get update
-          apt-get install -y \
-            zip \
-            unzip
+            apt-get update
+            apt-get install -y \
+                zip \
+                unzip \
+                python3 \
+                python3-pip \
+                python3-venv
 
-      - name: 🐍 Install pyenv and Python
+      - name: 🐍 Setup Python and create virtual environment
         run: |
-            # Install pyenv
-            curl https://pyenv.run | bash
-
-            # Add pyenv to PATH and initialize it
-            echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
-            echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
-            echo 'eval "$(pyenv init -)"' >> ~/.bashrc
-
-            # Source bashrc and install Python
-            source ~/.bashrc
-            pyenv install 3.11 -v
-            pyenv global 3.11
+            # Create symbolic links
+            ln -sf /usr/bin/python3 /usr/local/bin/python
+            ln -sf /usr/bin/pip3 /usr/local/bin/pip
 
             # Verify Python installation
+            echo "Python version:"
             python --version
+            echo "Pip version:"
             pip --version
+
+            # Create virtual environment
+            python -m venv /opt/venv
+            source /opt/venv/bin/activate
 
       - name: 📦 Install Python dependencies
         run: |
