--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -121,10 +121,11 @@ jobs:
 
             # Create virtual environment
             python -m venv /opt/venv
-            source /opt/venv/bin/activate
+            . /opt/venv/bin/activate
 
       - name: 📦 Install Python dependencies
         run: |
+            pip install --upgrade pip
             pip install -r ./src/requirements.txt
 
       - name: Terraform Deploy
