CI/CD: fix dataflow env [6]

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -103,11 +103,10 @@ jobs:
             . /opt/venv/bin/activate
             pip install --upgrade pip
             pip install -r ./src/requirements.txt
-            ln -sf /opt/venv/bin/python /usr/local/bin/python
-
 
       - name: Terraform Deploy
         run: |
+            . /opt/venv/bin/activate
             cd ./configs/terraform
             echo '🚧 Creating credentials file... 🚧'
             echo '${{ secrets.TERRAFORM_TFVARS }}' > terraform.tfvars
