--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,13 @@
 Faker==37.1.0
-google-cloud-bigquery==3.31.0
-google-cloud-secret-manager==2.23.3
-google-cloud-functions==1.20.3
-google-cloud-storage==2.19.0
-google-cloud-pubsub==2.29.0
-apache-beam[gcp]==2.66.0
-apache-airflow==2.10.5
 pyspark==3.5.6
-setuptools==78.1.1
 streamlit==1.49.1
+setuptools==78.1.1
+apache-airflow==2.10.5
+apache-beam[gcp]==2.66.0
+functions-framework==3.9.2
+google-cloud-pubsub==2.29.0
+google-cloud-storage==2.19.0
+google-cloud-language==2.17.2
+google-cloud-bigquery==3.31.0
+google-cloud-functions==1.20.3
+google-cloud-secret-manager==2.23.3
