feature: add new ... [3]

--- a/.gitignore
+++ b/.gitignore
@@ -189,10 +189,11 @@ terraform.tfvars
 # Terraform plan files
 *.tfplan
 # Terraform variable files
-.DS_Store
+*.DS_Store
 
 # GCP
 mts-default-portofolio.json
 Solve.md
 backup/*
+.editorconfig
 terraform.debug.log
