--- a/src/cloud_function/cf_sentiment_analysis/requirements.txt
+++ b/src/cloud_function/cf_sentiment_analysis/requirements.txt
@@ -1,3 +1,4 @@
+Flask==2.2.5
 functions-framework==3.9.2
-google-cloud-language==2.17.2
+google-cloud-bigquery==3.35.0
 google-cloud-secret-manager==2.23.3
