--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
 Faker==37.1.0
+Flask==2.2.5 # I must check out if this version is compatible..
 pyspark==3.5.6
 streamlit==1.49.1
 setuptools==78.1.1
@@ -10,4 +11,5 @@ google-cloud-storage==2.19.0
 google-cloud-language==2.17.2
 google-cloud-bigquery==3.31.0
 google-cloud-functions==1.20.3
+google-cloud-aiplatform==1.91.0
 google-cloud-secret-manager==2.23.3
